# glstudy

./: Actuator.h  CMakeLists.txt  Camera.h  CasCoords.h  DrawableLink.h  InterfaceSceneObject.h  Joint.h  Link.h  Mesh.h  ObjFileReader.h  Old.h  PartedObject.h  PrimitiveObject.h  SceneObject.h  Shader.cc  Shader.h  Utils.cc  Utils.h  Vertex.cc  Vertex.h  VertexObject.h  View.cc  View.h  build.sh  cycle_measure.h  dp_err.h  dp_type.h  main.cc  point.frag  point.vert  test.cc
shader/: point.frag  point.vert
